# sugarchain-desktop

./: README.md  package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/about/: index.html
src/explorer/: index.html
src/faq/: index.html
src/home/: index.html
src/home/static/css/: Baloo+Bhaijaan.css
src/home/static/js/: script.js
src/navigation/: navigation.css  navigation.js
src/wallet/: index.html
src/wallet/javascripts/: multilang.js
src/wallet/stylesheets/: font.css
