[package]
name = "sugarchain-desktop"
version = "0.1.1"
description = "Sugarchain light wallet"
authors = ["bailaoshijiadao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
